// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`toHaveState mount provides "any value" contextual information for the message (mount) 1`] = `
Object {
  "actual": "Actual state: [33marray[39m[90m:[39m [33m[90m[90m[[90m
  [34m1[90m
  [34m2[90m
  [34m3[90m
[90m][90m[33m[39m",
}
`;

exports[`toHaveState mount provides contextual information for the message (mount) 1`] = `
Object {
  "actual": "Actual state: [33marray[39m[90m:[39m [33m[90m[90m[[90m
  [34m1[90m
  [34m2[90m
  [34m3[90m
[90m][90m[33m[39m",
  "expected": "Expected state: [33marray[39m[90m:[39m [33m[90m[90m[[90m
  [34m1[90m
  [34m2[90m
  [34m3[90m
[90m][90m[33m[39m",
}
`;

exports[`toHaveState mount returns the "any value" message with the proper fail verbage (mount) 1`] = `"Expected the state for <Fixture> to not contain a value for key \\"array\\", but it did."`;

exports[`toHaveState mount returns the "any value" message with the proper pass verbage (mount) 1`] = `"Expected the state for <Fixture> to contain a value for key \\"array\\", but it did not."`;

exports[`toHaveState mount returns the message with the proper fail verbage (mount) 1`] = `"Expected the state for <Fixture> to not match for props \\"\\", but it did."`;

exports[`toHaveState mount returns the message with the proper pass verbage (mount) 1`] = `"Expected the state for <Fixture> to match for props \\"\\", but it did not."`;

exports[`toHaveState shallow provides "any value" contextual information for the message (shallow) 1`] = `
Object {
  "actual": "Actual state: [33marray[39m[90m:[39m [33m[90m[90m[[90m
  [34m1[90m
  [34m2[90m
  [34m3[90m
[90m][90m[33m[39m",
}
`;

exports[`toHaveState shallow provides contextual information for the message (shallow) 1`] = `
Object {
  "actual": "Actual state: [33marray[39m[90m:[39m [33m[90m[90m[[90m
  [34m1[90m
  [34m2[90m
  [34m3[90m
[90m][90m[33m[39m",
  "expected": "Expected state: [33marray[39m[90m:[39m [33m[90m[90m[[90m
  [34m1[90m
  [34m2[90m
  [34m3[90m
[90m][90m[33m[39m",
}
`;

exports[`toHaveState shallow returns the "any value" message with the proper fail verbage (shallow) 1`] = `"Expected the state for <div> to not contain a value for key \\"array\\", but it did."`;

exports[`toHaveState shallow returns the "any value" message with the proper pass verbage (shallow) 1`] = `"Expected the state for <div> to contain a value for key \\"array\\", but it did not."`;

exports[`toHaveState shallow returns the message with the proper fail verbage (shallow) 1`] = `"Expected the state for <div> to not match for props \\"\\", but it did."`;

exports[`toHaveState shallow returns the message with the proper pass verbage (shallow) 1`] = `"Expected the state for <div> to match for props \\"\\", but it did not."`;
